# imap-experiment

./: .travis.yml  CMakeLists.txt  README.md  build.sh  buildtest.sh  main.cpp  test.sh
src/: CMakeLists.txt  blah.cpp  boost_disable_warnings.hpp  main.cpp
test/: CMakeLists.txt  catch_main.cpp  tester.cpp
